server/src/grammer/JavaClassParser.ts
// Generated from c:\Users\User\Documents\LS4Pv3\server\grammar\JavaClassParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { JavaClassParserListener } from "./JavaClassParserListener";
import { JavaClassParserVisitor } from "./JavaClassParserVisitor";


export class JavaClassParser extends Parser {
	public static readonly BYTE = 1;
	public static readonly CHAR = 2;
	public static readonly DOUBLE = 3;
	public static readonly FLOAT = 4;
	public static readonly INT = 5;
	public static readonly LONG = 6;
	public static readonly SHORT = 7;
	public static readonly BOOLEAN = 8;
	public static readonly VOID = 9;
	public static readonly ARRAY_PREFIX = 10;
	public static readonly LPAREN = 11;
	public static readonly RPAREN = 12;
	public static readonly LT = 13;
	public static readonly GT = 14;
	public static readonly DOT = 15;
	public static readonly ASTERIX = 16;
	public static readonly ADD = 17;
	public static readonly SUB = 18;
	public static readonly CARET = 19;
	public static readonly COLON = 20;
	public static readonly WS = 21;
	public static readonly IDENTIFIER = 22;
	public static readonly CLASS_PREFIX = 23;
	public static readonly GEN_PREFIX = 24;
	public static readonly GEN_ID = 25;
	public static readonly GEN_SEMI = 26;
	public static readonly CLASSID = 27;
	public static readonly CLASSDIV = 28;
	public static readonly CLASSSEMI = 29;
	public static readonly RULE_mainMethodDescriptor = 0;
	public static readonly RULE_methodTypeSignature = 1;
	public static readonly RULE_formalTypeParameters = 2;
	public static readonly RULE_formalTypeParameter = 3;
	public static readonly RULE_classBound = 4;
	public static readonly RULE_interfaceBound = 5;
	public static readonly RULE_fieldTypeSignature = 6;
	public static readonly RULE_classTypeSignature = 7;
	public static readonly RULE_simpleClassTypeSignature = 8;
	public static readonly RULE_classTypeSignatureSuffix = 9;
	public static readonly RULE_typeVariableSignature = 10;
	public static readonly RULE_typeArguments = 11;
	public static readonly RULE_typeArgument = 12;
	public static readonly RULE_wildcardIndicator = 13;
	public static readonly RULE_methodDescriptor = 14;
	public static readonly RULE_fieldDescriptor = 15;
	public static readonly RULE_fieldType = 16;
	public static readonly RULE_baseType = 17;
	public static readonly RULE_objectType = 18;
	public static readonly RULE_className = 19;
	public static readonly RULE_arrayType = 20;
	public static readonly RULE_parameterDescriptor = 21;
	public static readonly RULE_returnDescriptor = 22;
	public static readonly RULE_voidDescriptor = 23;
	public static readonly RULE_classSignature = 24;
	public static readonly RULE_superclassSignature = 25;
	public static readonly RULE_superinterfaceSignature = 26;
	public static readonly RULE_arrayTypeSignature = 27;
	public static readonly RULE_typeSignature = 28;
	public static readonly RULE_returnType = 29;
	public static readonly RULE_throwsSignature = 30;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"mainMethodDescriptor", "methodTypeSignature", "formalTypeParameters", 
		"formalTypeParameter", "classBound", "interfaceBound", "fieldTypeSignature", 
		"classTypeSignature", "simpleClassTypeSignature", "classTypeSignatureSuffix", 
		"typeVariableSignature", "typeArguments", "typeArgument", "wildcardIndicator", 
		"methodDescriptor", "fieldDescriptor", "fieldType", "baseType", "objectType", 
		"className", "arrayType", "parameterDescriptor", "returnDescriptor", "voidDescriptor", 
		"classSignature", "superclassSignature", "superinterfaceSignature", "arrayTypeSignature", 
		"typeSignature", "returnType", "throwsSignature",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'B'", "'C'", "'D'", "'F'", "'I'", "'J'", "'S'", "'Z'", "'V'", 
		"'['", "'('", "')'", "'<'", "'>'", "'.'", "'*'", "'+'", "'-'", "'^'", 
		"':'", undefined, undefined, "'L'", "'T'", undefined, undefined, undefined, 
		"'/'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "BYTE", "CHAR", "DOUBLE", "FLOAT", "INT", "LONG", "SHORT", 
		"BOOLEAN", "VOID", "ARRAY_PREFIX", "LPAREN", "RPAREN", "LT", "GT", "DOT", 
		"ASTERIX", "ADD", "SUB", "CARET", "COLON", "WS", "IDENTIFIER", "CLASS_PREFIX", 
		"GEN_PREFIX", "GEN_ID", "GEN_SEMI", "CLASSID", "CLASSDIV", "CLASSSEMI",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(JavaClassParser._LITERAL_NAMES, JavaClassParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return JavaClassParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "JavaClassParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return JavaClassParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return JavaClassParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(JavaClassParser._ATN, this);
	}
	// @RuleVersion(0)
	public mainMethodDescriptor(): MainMethodDescriptorContext {
		let _localctx: MainMethodDescriptorContext = new MainMethodDescriptorContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, JavaClassParser.RULE_mainMethodDescriptor);
		try {
			this.state = 64;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 62;
				this.methodTypeSignature();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 63;
				this.methodDescriptor();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public methodTypeSignature(): MethodTypeSignatureContext {
		let _localctx: MethodTypeSignatureContext = new MethodTypeSignatureContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, JavaClassParser.RULE_methodTypeSignature);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === JavaClassParser.LT) {
				{
				this.state = 66;
				this.formalTypeParameters();
				}
			}

			this.state = 69;
			this.match(JavaClassParser.LPAREN);
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << JavaClassParser.BYTE) | (1 << JavaClassParser.CHAR) | (1 << JavaClassParser.DOUBLE) | (1 << JavaClassParser.FLOAT) | (1 << JavaClassParser.INT) | (1 << JavaClassParser.LONG) | (1 << JavaClassParser.SHORT) | (1 << JavaClassParser.BOOLEAN) | (1 << JavaClassParser.ARRAY_PREFIX) | (1 << JavaClassParser.CLASS_PREFIX) | (1 << JavaClassParser.GEN_PREFIX))) !== 0)) {
				{
				{
				this.state = 70;
				this.typeSignature();
				}
				}
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 76;
			this.match(JavaClassParser.RPAREN);
			this.state = 77;
			this.returnType();
			this.state = 81;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === JavaClassParser.CARET) {
				{
				{
				this.state = 78;
				this.throwsSignature();
				}
				}
				this.state = 83;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public formalTypeParameters(): FormalTypeParametersContext {
		let _localctx: FormalTypeParametersContext = new FormalTypeParametersContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, JavaClassParser.RULE_formalTypeParameters);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 84;
			this.match(JavaClassParser.LT);
			this.state = 86;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 85;
				this.formalTypeParameter();
				}
				}
				this.state = 88;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === JavaClassParser.IDENTIFIER);
			this.state = 90;
			this.match(JavaClassParser.GT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public formalTypeParameter(): FormalTypeParameterContext {
		let _localctx: FormalTypeParameterContext = new FormalTypeParameterContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, JavaClassParser.RULE_formalTypeParameter);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 92;
			this.match(JavaClassParser.IDENTIFIER);
			this.state = 93;
			this.classBound();
			this.state = 97;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === JavaClassParser.COLON) {
				{
				{
				this.state = 94;
				this.interfaceBound();
				}
				}
				this.state = 99;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classBound(): ClassBoundContext {
		let _localctx: ClassBoundContext = new ClassBoundContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, JavaClassParser.RULE_classBound);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this.match(JavaClassParser.COLON);
			this.state = 102;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << JavaClassParser.ARRAY_PREFIX) | (1 << JavaClassParser.CLASS_PREFIX) | (1 << JavaClassParser.GEN_PREFIX))) !== 0)) {
				{
				this.state = 101;
				this.fieldTypeSignature();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interfaceBound(): InterfaceBoundContext {
		let _localctx: InterfaceBoundContext = new InterfaceBoundContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, JavaClassParser.RULE_interfaceBound);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 104;
			this.match(JavaClassParser.COLON);
			this.state = 105;
			this.fieldTypeSignature();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldTypeSignature(): FieldTypeSignatureContext {
		let _localctx: FieldTypeSignatureContext = new FieldTypeSignatureContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, JavaClassParser.RULE_fieldTypeSignature);
		try {
			this.state = 110;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case JavaClassParser.CLASS_PREFIX:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 107;
				this.classTypeSignature();
				}
				break;
			case JavaClassParser.ARRAY_PREFIX:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 108;
				this.arrayTypeSignature();
				}
				break;
			case JavaClassParser.GEN_PREFIX:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 109;
				this.typeVariableSignature();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classTypeSignature(): ClassTypeSignatureContext {
		let _localctx: ClassTypeSignatureContext = new ClassTypeSignatureContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, JavaClassParser.RULE_classTypeSignature);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 112;
			this.match(JavaClassParser.CLASS_PREFIX);
			this.state = 113;
			this.simpleClassTypeSignature();
			this.state = 117;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === JavaClassParser.DOT) {
				{
				{
				this.state = 114;
				this.classTypeSignatureSuffix();
				}
				}
				this.state = 119;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 120;
			this.match(JavaClassParser.CLASSSEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public simpleClassTypeSignature(): SimpleClassTypeSignatureContext {
		let _localctx: SimpleClassTypeSignatureContext = new SimpleClassTypeSignatureContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, JavaClassParser.RULE_simpleClassTypeSignature);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 122;
			this.match(JavaClassParser.CLASSID);
			this.state = 127;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === JavaClassParser.CLASSDIV) {
				{
				{
				this.state = 123;
				this.match(JavaClassParser.CLASSDIV);
				this.state = 124;
				this.match(JavaClassParser.CLASSID);
				}
				}
				this.state = 129;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 131;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === JavaClassParser.LT) {
				{
				this.state = 130;
				this.typeArguments();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classTypeSignatureSuffix(): ClassTypeSignatureSuffixContext {
		let _localctx: ClassTypeSignatureSuffixContext = new ClassTypeSignatureSuffixContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, JavaClassParser.RULE_classTypeSignatureSuffix);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.match(JavaClassParser.DOT);
			this.state = 134;
			this.simpleClassTypeSignature();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeVariableSignature(): TypeVariableSignatureContext {
		let _localctx: TypeVariableSignatureContext = new TypeVariableSignatureContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, JavaClassParser.RULE_typeVariableSignature);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 136;
			this.match(JavaClassParser.GEN_PREFIX);
			this.state = 137;
			this.match(JavaClassParser.GEN_ID);
			this.state = 138;
			this.match(JavaClassParser.GEN_SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeArguments(): TypeArgumentsContext {
		let _localctx: TypeArgumentsContext = new TypeArgumentsContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, JavaClassParser.RULE_typeArguments);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 140;
			this.match(JavaClassParser.LT);
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 141;
				this.typeArgument();
				}
				}
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << JavaClassParser.ARRAY_PREFIX) | (1 << JavaClassParser.ASTERIX) | (1 << JavaClassParser.ADD) | (1 << JavaClassParser.SUB) | (1 << JavaClassParser.CLASS_PREFIX) | (1 << JavaClassParser.GEN_PREFIX))) !== 0));
			this.state = 146;
			this.match(JavaClassParser.GT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeArgument(): TypeArgumentContext {
		let _localctx: TypeArgumentContext = new TypeArgumentContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, JavaClassParser.RULE_typeArgument);
		let _la: number;
		try {
			this.state = 153;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case JavaClassParser.ARRAY_PREFIX:
			case JavaClassParser.ADD:
			case JavaClassParser.SUB:
			case JavaClassParser.CLASS_PREFIX:
			case JavaClassParser.GEN_PREFIX:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 149;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === JavaClassParser.ADD || _la === JavaClassParser.SUB) {
					{
					this.state = 148;
					this.wildcardIndicator();
					}
				}

				this.state = 151;
				this.fieldTypeSignature();
				}
				break;
			case JavaClassParser.ASTERIX:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 152;
				this.match(JavaClassParser.ASTERIX);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public wildcardIndicator(): WildcardIndicatorContext {
		let _localctx: WildcardIndicatorContext = new WildcardIndicatorContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, JavaClassParser.RULE_wildcardIndicator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 155;
			_la = this._input.LA(1);
			if (!(_la === JavaClassParser.ADD || _la === JavaClassParser.SUB)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public methodDescriptor(): MethodDescriptorContext {
		let _localctx: MethodDescriptorContext = new MethodDescriptorContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, JavaClassParser.RULE_methodDescriptor);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 157;
			this.match(JavaClassParser.LPAREN);
			this.state = 161;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << JavaClassParser.BYTE) | (1 << JavaClassParser.CHAR) | (1 << JavaClassParser.DOUBLE) | (1 << JavaClassParser.FLOAT) | (1 << JavaClassParser.INT) | (1 << JavaClassParser.LONG) | (1 << JavaClassParser.SHORT) | (1 << JavaClassParser.BOOLEAN) | (1 << JavaClassParser.ARRAY_PREFIX) | (1 << JavaClassParser.CLASS_PREFIX))) !== 0)) {
				{
				{
				this.state = 158;
				this.parameterDescriptor();
				}
				}
				this.state = 163;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 164;
			this.match(JavaClassParser.RPAREN);
			this.state = 165;
			this.returnDescriptor();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldDescriptor(): FieldDescriptorContext {
		let _localctx: FieldDescriptorContext = new FieldDescriptorContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, JavaClassParser.RULE_fieldDescriptor);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 167;
			this.fieldType();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public fieldType(): FieldTypeContext {
		let _localctx: FieldTypeContext = new FieldTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, JavaClassParser.RULE_fieldType);
		try {
			this.state = 172;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case JavaClassParser.BYTE:
			case JavaClassParser.CHAR:
			case JavaClassParser.DOUBLE:
			case JavaClassParser.FLOAT:
			case JavaClassParser.INT:
			case JavaClassParser.LONG:
			case JavaClassParser.SHORT:
			case JavaClassParser.BOOLEAN:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 169;
				this.baseType();
				}
				break;
			case JavaClassParser.CLASS_PREFIX:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 170;
				this.objectType();
				}
				break;
			case JavaClassParser.ARRAY_PREFIX:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 171;
				this.arrayType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public baseType(): BaseTypeContext {
		let _localctx: BaseTypeContext = new BaseTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, JavaClassParser.RULE_baseType);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 174;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << JavaClassParser.BYTE) | (1 << JavaClassParser.CHAR) | (1 << JavaClassParser.DOUBLE) | (1 << JavaClassParser.FLOAT) | (1 << JavaClassParser.INT) | (1 << JavaClassParser.LONG) | (1 << JavaClassParser.SHORT) | (1 << JavaClassParser.BOOLEAN))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}
